[package]
edition = "2021"
name = "robert"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { version = "0.3.0", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
embassy-time = { version = "0.1.3", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.2.0", features = ["defmt"] }

# embassy-embedded-hal = { version = "0.1.0", path = "../../embassy-embedded-hal", features = ["defmt"] }
# embassy-sync = { version = "0.2.0", path = "../../embassy-sync", features = ["defmt"] }
# embassy-net = { version = "0.1.0", path = "../../embassy-net", features = ["defmt", "nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
# embassy-net-wiznet = { version = "0.1.0", path = "../../embassy-net-wiznet", features = ["defmt"] }
# embassy-usb-logger = { version = "0.1.0", path = "../../embassy-usb-logger" }
# embassy-lora = { version = "0.1.0", path = "../../embassy-lora", features = ["time", "defmt"] }
# lora-phy = { version = "1" }
# lorawan-device = { version = "0.10.0", default-features = false, features = ["async", "external-lora-phy"] }
# lorawan = { version = "0.7.3", default-features = false, features = ["default-crypto"] }
# cyw43 = { path = "../../cyw43", features = ["defmt", "firmware-logs"] }
# cyw43-pio = { path = "../../cyw43-pio", features = ["defmt", "overclock"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
pio = "0.2.1"
heapless = "0.7.15"
smart-leds = "0.3.0"
profont = "0.7.0"
embedded-graphics = "0.8.1"

# futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
# display-interface-spi = "0.4.1"
# embedded-graphics = "0.7.1"
# st7789 = "0.6.1"
# display-interface = "0.4.1"
# byte-slice-cast = { version = "1.2.0", default-features = false }
# usbd-hid = "0.6.1"

# embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
# embedded-hal-async = "1.0.0-rc.1"
# embedded-hal-bus = { version = "0.1.0-rc.1", features = ["async"] }
# embedded-io-async = { version = "0.5.0", features = ["defmt-03"] }
# embedded-storage = { version = "0.3" }
# static_cell = { version = "1.1", features = ["nightly"]}
# log = "0.4"
# pio-proc = "0.2"
# rand = { version = "0.8.5", default-features = false }

[dependencies.portable-atomic]
version = "1.4.3"
features = ["critical-section"]

[dependencies.forth3]
git = "https://github.com/tosc-rs/mnemos"
rev = "efbc42825e7dcd0e12d708a63cb187d93f07ff54"
features = ["async"]

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
lto = 'fat'
opt-level = 'z' # <-

[patch.crates-io]
# lora-phy = { git = "https://github.com/embassy-rs/lora-phy", rev = "1323eccc1c470d4259f95f4f315d1be830d572a3"}
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "0e9131fd1465d8fc765c4da05ce63d9dfbf950c7" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "0e9131fd1465d8fc765c4da05ce63d9dfbf950c7" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "0e9131fd1465d8fc765c4da05ce63d9dfbf950c7" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "0e9131fd1465d8fc765c4da05ce63d9dfbf950c7" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "0e9131fd1465d8fc765c4da05ce63d9dfbf950c7" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "0e9131fd1465d8fc765c4da05ce63d9dfbf950c7" }
